--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,14 +19,15 @@
 =======
         <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- responsive -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" /> <!-- Bootstrap CDN -->
-        <meta http-equiv="Refresh" content="120"> <!-- Réactualise la page tous les 2 minutes -->
-	<!--
+        <meta http-equiv="Refresh" content="6"> <!-- Réactualise la page tous les 2 minutes = 120 secondes -->
+	
         <style>
             body{
-                background-image: url("bodybuilding.jpg");
+                background-image: url("/home/etudiant/M1/projet/blog/templates/bodybuilding.jpg");
+                background-color:#610B21;
             }
         </style>
-	-->
+	
     </head>
     
     <body>
