--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
+        <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- responsive -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" /> <!-- Bootstrap CDN -->
+        <meta http-equiv="Refresh" content="6"> <!-- Réactualise la page tous les 2 minutes = 120 secondes -->
+	
+        <style>
+            body{
+                background-image: url("/home/etudiant/M1/projet/blog/templates/bodybuilding.jpg");
+                background-color:#610B21;
+            }
+        </style>
+	
     </head>
+    
     <body>
-        {% block body %}{% endblock %}
+        <div class="container-fluid" style="margin-top:50px;">
+            {% block body %}{% endblock %}
+        </div>
+
         {% block javascripts %}{% endblock %}
     </body>
 </html>
+
