--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,7 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- responsive -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" /> <!-- Bootstrap CDN -->
         <meta http-equiv="Refresh" content="1200"> <!-- Réactualise la page tous les 2 minutes = 120 secondes -->
 
