--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,10 +17,9 @@
                 margin-right: 10px;
             }
         </style>
-        <div class="container-fluid" style="margin-top:20px;text-align:center;">
+        <div class="container-fluid" style="margin-top:20px;">
             {% block body %}{% endblock %}
         </div>
-
         {% block javascripts %}{% endblock %}
     </body>
 </html>
