--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,7 +17,7 @@
                 margin-right: 10px;
             }
         </style>
-        <div class="container-fluid" style="margin-top:20px;">
+        <div class="container-fluid" style="margin-top:20px;text-align:center;">
             {% block body %}{% endblock %}
         </div>
         {% block javascripts %}{% endblock %}
