--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,6 +31,10 @@
             #divEtu > div:nth-child(1){
                 font-weight:bold;
             }
+
+            .statistiques {
+                text-align:center;
+            }
         </style>
     </head>
     
